--- a/.gitignore
+++ b/.gitignore
@@ -143,5 +143,5 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python
 
-Pipfile
-Pipfile.lock
+/Pipfile
+/Pipfile.lock
